2010-11-19  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Ojan Vafai.

        nrwt - config.build_directory() is busted

        Fixes a typo that was causing us to usually return the top level
        directory WebKitBuild instead of WebKitBuild/{Debug,Release}. The
        bug was hidden by test stubs that were too simplistic :(.

        https://bugs.webkit.org/show_bug.cgi?id=49815

        * Scripts/webkitpy/common/system/executive_mock.py:
        * Scripts/webkitpy/layout_tests/port/config.py:
        * Scripts/webkitpy/layout_tests/port/config_unittest.py:

2010-11-19  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Adam Roben.

        Add Debug_Cairo_CFLite and Release_Cairo_CFLite configurations for all vcproj files
        https://bugs.webkit.org/show_bug.cgi?id=49819

        * DumpRenderTree/DumpRenderTree.sln:
        * DumpRenderTree/TestNetscapePlugIn/win/TestNetscapePlugin.vcproj:
        * DumpRenderTree/win/DumpRenderTree.vcproj:
        * DumpRenderTree/win/ImageDiff.vcproj:
        * FindSafari/FindSafari.vcproj:
        * MiniBrowser/MiniBrowser.vcproj:
        * TestWebKitAPI/win/TestWebKitAPI.sln:
        * TestWebKitAPI/win/TestWebKitAPI.vcproj:
        * TestWebKitAPI/win/TestWebKitAPIGenerated.vcproj:
        * WebKitAPITest/WebKitAPITest.vcproj:
        * WebKitLauncherWin/WebKitLauncherWin.vcproj:
        * WebKitTestRunner/win/InjectedBundle.vcproj:
        * WebKitTestRunner/win/InjectedBundleGenerated.vcproj:
        * WebKitTestRunner/win/WebKitTestRunner.vcproj:
        * WinLauncher/WinLauncher.vcproj:
        * record-memory-win/record-memory-win.vcproj:

2010-11-19  Adam Roben  <aroben@apple.com>

        Add some more Windows slaves

        This is probably more than we will be using in the immediate future,
        but having some extra slave names makes experimenting with different
        configurations easier.

        Reviewed by Jon Honeycutt.
