@@ -2,6 +2,17 @@
 
         Reviewed by Ojan Vafai.
 
+        Do some minor cleanup and bug fixing.
+
+        https://bugs.webkit.org/show_bug.cgi?id=49777
+
+        * Scripts/webkitpy/layout_tests/layout_package/dump_render_tree_thread.py:
+        * Scripts/webkitpy/layout_tests/run_webkit_tests_unittest.py:
+
+2010-11-19  Dirk Pranke  <dpranke@chromium.org>
+
+        Reviewed by Ojan Vafai.
+
         nrwt - config.build_directory() is busted
 
         Fixes a typo that was causing us to usually return the top level
